2001-11-08  Eric Blake  <ebb9@email.byu.edu>

	* src/double.h (NAN_BITS): Rename from NAN, which happened to
	expand as a pre-processor macro in gcc 3.0.1 - bug 2255.

2001-11-08  Eric Blake  <ebb9@email.byu.edu>

	* src/decl.cpp (CompleteSymbolTable): Improve the tests for
	abstract method implementations, bug 2382.
	(AddInherited*): Improve tests for ambiguous names, as the public
	member of a superclass' interface is inherited even if the default
	member of the grandparent class is not. This is a first of two
	parts for addressing bug 2376.
	* src/table.h (class ExpandedMethodTable): Fix method return types
	for use in AddInheritedMethods - patch 227.

2001-11-07  Chris Dennis  <Chris.Dennis@invidi.com>

	* src/symbol.cpp: Fix for-loop scoping for the non-compliant VC++
	compiler (this seems to be a recurring problem!) - bug 2377.

2001-11-06  Eric Blake  <ebb9@email.byu.edu>

	* src/error.h:
	* src/error.cpp (FIELD_NAME_NOT_FOUND, METHOD_NAME_NOT_FOUND):
	Rename from NAME_NOT_FOUND, METHOD_NAME_NOT_FOUND_IN_TYPE.
	(FIELD_NOT_ACCESSIBLE, METHOD_NOT_ACCESSIBLE),
	(CONSTRUCTOR_NOT_ACCESSIBLE): Consolidate from several similar
	errors.
	(PROTECTED_INSTANCE_FIELD_NOT_ACCESSIBLE),
	(PROTECTED_INSTANCE_METHOD_NOT_ACCESSIBLE): Add to give better
	error message in protected access violation.
	(STATIC_PROTECTED_FIELD_ACCESS, STATIC_PROTECTED_METHOD_ACCESS):
	Delete these errors, as JLS2 made them legal.	
	* src/symbol.h: 
	* src/symbol.cpp (GetReadAccessConstructor): Split from
	GetReadAccessMethod.
	* src/expr.cpp:
	* src/body.cpp (ProcessSuperCall): Update to use above changes.

2001-11-06  Eric Blake  <ebb9@email.byu.edu>

	* src/body.cpp (ProcessExecutableBodies): Suppress spurious
	warning messages about finals not assigned in a constructor which
	contains semantic errors, bug 669.
	* src/symbol.cpp (CleanUp): Fix core dump from patch 225.

2001-11-05  Eric Blake  <ebb9@email.byu.edu>

	Patch 139.
	* src/scanner.cpp (ScanKeyword6, ClassifyIdOrKeyword)
	(ClassifyId):